# open-recorder

./: .gitignore  .release-it.json  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
docs/plans/: 2026-03-05-open-recorder-v1-design.md  2026-03-08-local-stt-mlx-whisper-design.md  2026-03-08-local-stt-mps-fallback-design.md  2026-03-08-local-stt-troubleshooting-log.md
docs/superpowers/specs/: 2026-04-15-release-dmg-stability-design.md
scripts/: build-release-bundles.mjs  release-auto.mjs  release-dry-run.mjs  release-notes.mjs  release-recommendation.mjs  sync-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  cargo_check_errors.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: local_stt_worker.py
src-tauri/src/: lib.rs  main.rs  models.rs  process_util.rs  state.rs  storage.rs
src-tauri/src/commands/: insight.rs  job.rs  local_provider.rs  mod.rs  recorder.rs  session.rs  settings.rs  summary.rs  summary_export.rs  transcribe.rs
src-tauri/src/providers/: aliyun_oss.rs  aliyun_tingwu.rs  aliyun_tingwu_realtime.rs  bailian.rs  local_stt.rs  mod.rs  oss.rs
src/components/: DiscoverPdfReport.tsx  DiscoverTab.tsx  RecorderTab.tsx  SessionsTab.tsx  SettingsTab.tsx  TabNav.tsx
src/i18n/: index.ts  messages.ts
src/lib/: api.ts  formatFileSize.ts  localSttWhisperModels.ts  pdfExport.ts
src/types/: domain.ts
