[package]
name = "open_recorder"
version = "0.1.1"
description = "Local-first recorder with transcription and meeting summary"
authors = ["Open Recorder Team"]
edition = "2021"

[lib]
name = "open_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hmac = "0.12"
hex = "0.4"
hound = "3.5"
md5 = "0.7"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
